@@ -1,6 +1,7 @@
 // URL(Uniform Resource Locator) - 포트번호 생략
 package com.eomcs.net.ex07;
 
+import java.net.URI;
 import java.net.URL;
 
 public class Exam02 {
@@ -9,7 +10,7 @@ public class Exam02 {
     // 포트번호 명시
     // - http://서버주소:포트번호/자원경로?파라미터명=값&파라미터명=값&파라미터명=값 
     //    URL url = new URL("https://search.naver.com/search.naver?sm=top_hty&fbm=1&ie=utf8&query=bitcamp");
-    URL url = new URL("https://search.naver.com/search.naver");
+    URL url = new URI("https://search.naver.com/search.naver").toURL();
 
     // URL 분석
     System.out.printf("프로토콜: %s\n", url.getProtocol());
