@@ -1,6 +1,7 @@
 // URL(Uniform Resource Locator) - 부가 데이터 지정
 package com.eomcs.net.ex07;
 
+import java.net.URI;
 import java.net.URL;
 
 public class Exam04 {
@@ -8,7 +9,7 @@ public class Exam04 {
   public static void main(String[] args) throws Exception {
     // 서버에 보내는 파라미터를 표시
     // - http://서버주소:포트/자원경로?파라미터명=값&파라미터명=값&파라미터명=값 
-    URL url = new URL("https://search.naver.com/search.naver?sm=top_hty&fbm=1&ie=utf8&query=bitcamp");
+    URL url = new URI("https://search.naver.com/search.naver?sm=top_hty&fbm=1&ie=utf8&query=bitcamp").toURL();
 
     // URL 분석
     System.out.printf("프로토콜: %s\n", url.getProtocol());
