@@ -4,6 +4,7 @@ package com.eomcs.net.ex08;
 import java.io.BufferedReader;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 
 public class Exam0110 {
@@ -14,7 +15,7 @@ public class Exam0110 {
     // 특히 HTTPS까지도 처리할 수 있다.
 
     // => URL 주소를 검증하고 준비한다.
-    URL url = new URL("https://sports.news.naver.com/index");
+    URL url = new URI("https://sports.news.naver.com/index").toURL();
 
     // => 서버와 연결하고 HTTP 요청을 수행한다.
     // => 그런 후에 웹서버의 응답 데이터를 읽어들일 도구를 준비한다.
